kubernetes/apps/navidrome/overlays/shared/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome
  annotations:
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  tls:
    - hosts:
        - navidrome.shared.h.svenlito.com
  rules:
    - host: navidrome.shared.h.svenlito.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: navidrome
                port:
                  name: http
